--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=Europe/Moscow
+spring.datasource.url=jdbc:mysql://localhost:3306/dbtest?serverTimezone=Europe/Moscow
 spring.datasource.username=root
 spring.datasource.password=ilupat123
 spring.jpa.properties.hibernate.show_sql=true
